# automl

./: README.md  pyproject.toml  requirements.txt
automl_cv/: __main__.py  cli.py  config.py
automl_cv/models/: __init__.py  base.py  mobilenet_adapter.py  ultralytics_adapter.py  yolov5_adapter.py
automl_cv/trainers/: __init__.py  automl_trainer.py
automl_cv/utils/: logging.py
examples/configs/: classification_minimal.yaml  detection_minimal.yaml
