[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-cv"
version = "0.1.0"
description = "Automated small model training system for Computer Vision (YOLOv5–YOLOv11, MobileNet)"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer==0.12.3",
  "rich>=13.7.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.2.0"]
torch = ["torch", "torchvision"]
export = ["onnx", "onnxruntime", "coremltools", "openvino-dev", "tensorflow-cpu"]

[project.scripts]
automl-cv = "automl_cv.cli:main"